# GPC

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: imu.launch  imu_serial.launch  multi_imu.launch  xsens_driver.launch
msg/: Gait_Info.msg  Glass_Gaze.msg
scripts/controller/: main_control.py
scripts/env_perception/: factor_utils.py  fpp_node.py  gaze_publisher.py  viewer.json
scripts/imu_related/: imu_.py  imu_serial.py  multi_imu_rec.py  pose_publisher.py  pose_publisher_serial.py
scripts/imu_related/Xsens_MTI_630/: mtdevice.py  mtnode.py
scripts/imu_related/log/: imu_left_foot.npy  imu_left_shank.npy  imu_left_thigh.npy  imu_right_foot.npy  imu_right_shank.npy  imu_right_thigh.npy  imu_trunk.npy
scripts/processing/: dynamic_plot.py  gait_event_reporter.py  maker_processor.py
src/gaze_pros_control/: factor_utils.py
